examples/test/testpolicy15995.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15995
  namespace: namespace129
spec:
  podSelector:
    matchLabels:
      key19: value36
      key36: value41
      key3: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value26
          key30: value13
      podSelector:
        matchLabels:
          key13: value34
          key3: value5
          key21: value24
